--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>ДРАД</title>
 	<link rel="stylesheet" href="CSS/main.css">
-	<link rel="icon" href="img/icon.png" type="img/icon.png">
+	<link rel="icon" href="img/icona.png" type="img/icon.png">
 </head>
 <body>
 	<kkklog>
